release 1.1.3-ea (2009-09)

release 1.1.2-ea (2009-08-25)
- Fixed issue 355
  https://jersey.dev.java.net/issues/show_bug.cgi?id=355
  URI conneg works for the case of when a suffix say "nt" is present
  in the path and is not preceded by a '.', for example "/ontology.nl
  URI conneg is now a container request filter, see:
  com.sun.jersey.api.container.filter.UriConnegFilter
  Developers may extend this filters and register it rather than utilizing the
  ResourceConfig.getMediaTypeMappings and ResourceConfig.getLanguageMappings.
- Fixed issue 354
  https://jersey.dev.java.net/issues/show_bug.cgi?id=354
  Runtime exceptions thrown from Singleton or Stateless Session Beans,
  such as WebApplicationException, will be mapped appropraitely.
- Fixed issue 353
  https://jersey.dev.java.net/issues/show_bug.cgi?id=353
  Form reading/writing will use the charset declared in the charset parameter
  of the media type if present, otherwise the UTF-8 charset will be utilized,
  to decode/encode characters.
- Fixed issue 250
  https://jersey.dev.java.net/issues/show_bug.cgi?id=250
  Updated the JavaDoc of HttpContext.getProperties and
  ContainerResponse.getProperties to state:
     * Care should be taken not to clear the properties or remove properties
     * that are unkown otherwise unspecified behaviour may result.
- Fixed issue 343
  https://jersey.dev.java.net/issues/show_bug.cgi?id=343
  The ResourceConfig property
    PROPERTY_DEFAULT_RESOURCE_COMPONENT_PROVIDER_FACTORY_CLASS
  additional supports a Java type that is a String whose value is a Class name.
- Fixed issue 332
  https://jersey.dev.java.net/issues/show_bug.cgi?id=332
  If an Content-Type header is recieved with an empty value a 400 
  response is returned.
- Fixed issue 350
  https://jersey.dev.java.net/issues/show_bug.cgi?id=350
  Errors when processing a parameter, annotated with an @*Param annotation,
  will result in an instance of ParamException (that extends WebApplicaton)