@@ -37,6 +37,8 @@
 
 package com.sun.jersey.api.client;
 
+import com.sun.jersey.api.client.config.ClientConfig;
+
 /**
  * A uniform interface for invoking HTTP requests.
  * <p>
@@ -50,11 +52,35 @@ package com.sun.jersey.api.client;
  * required then an instance of {@link javax.ws.rs.core.GenericEntity} may
  * be used.
  * <p>
- * A type of {@link ClientResponse} declared for the response entity
- * may be used to obtain the status, headers and response entity. If any other
- * type is declared and the response status is greater than or equal to
- * 300 then a {@link UniformInterfaceException} exception will be thrown, from 
- * which the {@link ClientResponse} instance can be accessed.
+ * A type of {@link ClientResponse} declared
+ * for the response entity may be used to obtain the status, headers and
+ * response entity.
+ * <p>
+ * If any type, other than {@link ClientResponse},
+ * is declared and the response status is greater than or equal to 300 then a
+ * {@link UniformInterfaceException} exception
+ * will be thrown, from which the
+ * {@link ClientResponse} instance can be
+ * accessed.
+ * <p>
+ * In the following cases it is necessary to close the response, when response
+ * processing has completed, to ensure that underlying resources are
+ * correctly released.
+ * <p>
+ * If a response entity is declared of the type
+ * {@link ClientResponse}
+ * or of a type that is assignable to {@link java.io.Closeable}
+ * (such as {@link java.io.InputStream}) then the response must be either:
+ * 1) closed by invoking the method
+ * {@link ClientResponse#close() } or
+ * {@link java.io.Closeable#close}; or 2) all bytes of response entity must be
+ * read.
+ * <p>
+ * If a {@link UniformInterfaceException} is
+ * thrown then by default the response entity is automatically buffered and
+ * the underlying resources are correctly released. See the following property
+ * for more details:
+ * {@link ClientConfig#PROPERTY_BUFFER_RESPONSE_ENTITY_ON_EXCEPTION}.
  * 
  * @author Paul.Sandoz@Sun.Com
  * @see com.sun.jersey.api.client
